--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "type": "module",
   "workspaces": [
     "src/DAppStore_frontend"
-  ]
+  ],
+  "dependencies": {
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.0"
+  }
 }
