--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "src/DAppStore_frontend"
   ],
   "dependencies": {
+    "@dfinity/agent": "^3.2.2",
+    "@dfinity/auth-client": "^3.2.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0"
   }
