--- a/src/DAppStore_frontend/package.json
+++ b/src/DAppStore_frontend/package.json
@@ -15,7 +15,8 @@
     "@dfinity/candid": "^1.4.0",
     "@dfinity/principal": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
